serach box added

--- a/style/submain-storage.css
+++ b/style/submain-storage.css
@@ -604,6 +604,215 @@ body {
 
 
 
+/* serach design  for big screen*/
+
+
+
+
+.menu-item {
+    transform: scale(1);
+    transition: 0.5s;
+    display: block;
+    backface-visibility: hidden;
+}
+
+
+.hide-item {
+    transform: scale(0);
+}
+
+
+.hide-dropdown {
+    transform: scale(0);
+}
+
+.ul-nav-list li:nth-child(1) a.menu-item.hide-item {
+    transition-delay: 0.6s;
+}
+
+.ul-nav-list li:nth-child(2) a.menu-item.hide-item {
+    transition-delay: 0.5s;
+}
+
+.ul-nav-list li:nth-child(3) a.menu-item.hide-item {
+    transition-delay: 0.4s;
+}
+
+.ul-nav-list li:nth-child(4) a.menu-item.hide-item {
+    transition-delay: 0.3s;
+}
+
+.ul-nav-list li:nth-child(5) a.menu-item.hide-item {
+    transition-delay: 0.2s;
+}
+
+.ul-nav-list li:nth-child(6) a.menu-item.hide-item {
+    transition-delay: 0.1s;
+}
+
+.ul-nav-list li:nth-child(8) a.menu-item.hide-item {
+    transition-delay: 0.1s;
+}
+
+
+
+.ul-nav-list li:nth-child(1) a.menu-item {
+    transition-delay: 0.1s;
+}
+
+.ul-nav-list li:nth-child(2) a.menu-item {
+    transition-delay: 0.2s;
+}
+
+.ul-nav-list li:nth-child(3) a.menu-item {
+    transition-delay: 0.3s;
+}
+
+.ul-nav-list li:nth-child(4) a.menu-item {
+    transition-delay: 0.4s;
+}
+
+.ul-nav-list li:nth-child(5) a.menu-item {
+    transition-delay: 0.5s;
+}
+
+.ul-nav-list li:nth-child(6) a.menu-item {
+    transition-delay: 0.6s;
+}
+
+.ul-nav-list li:nth-child(8) a.menu-item {
+    transition-delay: 0.7s;
+}
+
+
+
+.search-form {
+    position: absolute;
+    top: 0;
+    left: 70%;
+    transform: translateX(-50%);
+    width: 500px;
+    height: 44px;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.5s;
+    border-bottom: 2px solid var(--selmaon-black);
+
+
+}
+
+.search-form input {
+    width: 100%;
+    height: 4.4rem;
+    background: transparent;
+    color: var(--teal-black);
+    border: none;
+
+    outline: none;
+    font-size: 1.4rem;
+    padding-left: 2rem;
+}
+
+
+.active-serach-form {
+    opacity: 1;
+    visibility: visible;
+    transition-delay: 1s;
+   
+}
+
+
+
+
+
+/* serach design for small screen */
+
+.form-small-serach {
+    position: relative;
+    /* margin-top: 2rem;
+    margin-bottom: 1.5rem; */
+    margin: 2rem 3rem 1.5rem 1rem;
+    width: auto;
+    background: var(--nightMare-blue);
+    border-radius: 0.7rem;
+}
+
+.form-small-serach input {
+    height: 5rem;
+    font-family: 'Lato', sans-serif;
+    border: 0;
+    color: var(--teal-black);
+    font-size: 1.6rem;
+}
+
+.form-small-serach input[type="search"] {
+    outline: 0;
+    width: 100%;
+    /* background: rgb(238, 238, 238);
+   */
+    background-color: #fff;
+    padding: 0 1.6rem;
+    border-radius: 0.7rem;
+    appearance: none;
+    transition: all 0.3s cubic-bezier(0, 0, 0.43, 1.49);
+    transition-property: width, border-radius;
+    z-index: 1;
+    position: relative;
+}
+
+.form-small-serach i {
+    display: block;
+    position: absolute;
+    top: 8px;
+    right: 0;
+    width: 6rem;
+    font-weight: bold;
+    font-size: 3rem;
+    background: var(--nightMare-blue);
+    color: #fff;
+    border-radius: 0 0.7rem 0.7rem 0;
+    cursor: pointer;
+    transition: all 0.5s;
+    text-align: center;
+}
+
+
+.form-small-serach i:hover {
+    transform: scale(0.8)
+}
+
+.form-small-serach input:not(:placeholder-shown) {
+    border-radius: 0.7rem 0 0 0.7rem;
+    width: calc(100% - 6rem);
+
+}
+
+.form-small-serach label {
+    position: absolute;
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0;
+    border: 0;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+}
+
+
+
+/* Responsive Design */
+
+
+
+@media only screen and (max-width:1250px) {
+    .search-form {
+
+        width: 45rem;
+        height: 4.3rem;
+
+    }
+}
+
+
 /*  Responsive design` */
 
 
