--- a/template/mainItem.html
+++ b/template/mainItem.html
@@ -30,6 +30,22 @@
             </button>
 
             <div class="collapse navbar-collapse navbar-div" id="navbarNav">
+
+
+
+                <!-- small screen serach box -->
+                <div>
+                    <form onsubmit="event.preventDefault();" role="search" class="SmallScreen form-small-serach">
+                        <label for="search2">Search for stuff</label>
+                        <input id="search2" type="search" placeholder="Search..." autofocus required />
+                        <i type="submit" class="fa fa-search"></i>
+                    </form>
+                    <hr>
+                </div>
+
+
+
+
                 <ul class="navbar-nav mr-4">
                     <li class="nav-item dropdown navbar-animation navbar-main-style mr-3 BigScreen">
                         <a class="nav-link" href="mainItem.html" id="navbarDropdown">
@@ -72,7 +88,8 @@
 
 
                     <li class="nav-item dropdown navbar-animation navbar-main-style mr-3 BigScreen">
-                        <a class="nav-link" href="submain-server.html" id="navbarDropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link" href="submain-server.html" id="navbarDropdown" aria-haspopup="true"
+                            aria-expanded="false">
                             Server
                         </a>
                         <div class="dropdown-menu left-dropdown dropdown-show" aria-labelledby="navbarDropdown">
@@ -84,8 +101,8 @@
 
 
                     <li class="nav-item dropdown  navbar-main-style mr-3 SmallScreen">
-                        <a class="nav-link dropdown-toggle" href="submain-server.html" id="navbarDropdown" aria-haspopup="true"
-                            data-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="submain-server.html" id="navbarDropdown"
+                            aria-haspopup="true" data-toggle="dropdown" aria-expanded="false">
                             Server
                         </a>
                         <div class="dropdown-menu dropdown-show" aria-labelledby="navbarDropdown">
@@ -97,7 +114,8 @@
 
 
                     <li class="nav-item dropdown navbar-animation navbar-main-style mr-3 BigScreen">
-                        <a class="nav-link" href="submain-cloud.html" id="navbarDropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link" href="submain-cloud.html" id="navbarDropdown" aria-haspopup="true"
+                            aria-expanded="false">
                             Cloud
                         </a>
                         <div class="dropdown-menu left-dropdown dropdown-show" aria-labelledby="navbarDropdown">
@@ -112,8 +130,8 @@
                     <!-- Small Screen -->
 
                     <li class="nav-item dropdown  navbar-main-style mr-3 SmallScreen">
-                        <a class="nav-link dropdown-toggle" href="submain-cloud.html" id="navbarDropdown" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="submain-cloud.html" id="navbarDropdown"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Cloud
                         </a>
                         <div class="dropdown-menu left-dropdown dropdown-show" aria-labelledby="navbarDropdown">
@@ -122,6 +140,12 @@
                         </div>
                     </li>
 
+
+
+                    <!-- search icon big screen -->
+                    <li class="nav-item navbar-main-style mr-3 BigScreen">
+                        <a class="nav-link nav-account" id="search" href=""><i class="fa fa-search"></i></a>
+                    </li>
 
 
                     <li class="nav-item dropdown navbar-animation navbar-main-style mr-3">
@@ -135,6 +159,13 @@
                         </div>
                     </li>
                 </ul>
+
+                <!-- big screen serach box -->
+                <div class="search-form BigScreen">
+                    <form action="">
+                        <input class="input-serach" type="text" placeholder="Search...">
+                    </form>
+                </div>
             </div>
         </div>
     </nav>
@@ -159,8 +190,8 @@
                 <div class="card border-0">
                     <div class="card-body row card-position">
                         <div class="card-img col-md-5  float-left text-center">
-                            <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="400px" width="auto"
-                                    class="img-fluid" alt=""></a>
+                            <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="400px"
+                                    width="auto" class="img-fluid" alt=""></a>
                         </div>
                         <div class="col-md-7 float-left ">
                             <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
@@ -179,8 +210,8 @@
                 <div class="card  border-0">
                     <div class="card-body row">
                         <div class="card-img col-md-5 float-left text-center">
-                            <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="400px" width="auto"
-                                    class="img-fluid" alt=""></a>
+                            <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="400px"
+                                    width="auto" class="img-fluid" alt=""></a>
                         </div>
                         <div class="col-md-7 float-left ">
                             <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
@@ -199,8 +230,8 @@
                 <div class="card border-0">
                     <div class="card-body row">
                         <div class="card-img col-md-5 float-left text-center">
-                            <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="400px" width="auto"
-                                    class="img-fluid" alt=""></a>
+                            <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="400px"
+                                    width="auto" class="img-fluid" alt=""></a>
                         </div>
                         <div class="col-md-7 float-left ">
                             <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
@@ -220,8 +251,8 @@
                 <div class="card border-0">
                     <div class="card-body row">
                         <div class="card-img col-md-5 float-left text-center">
-                            <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="400px" width="auto"
-                                    class="img-fluid" alt=""></a>
+                            <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="400px"
+                                    width="auto" class="img-fluid" alt=""></a>
                         </div>
                         <div class="col-md-7 float-left ">
                             <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
@@ -241,8 +272,8 @@
                 <div class="card mb-3 border-0">
                     <div class="card-body row">
                         <div class="card-img col-md-5 float-left text-center">
-                            <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="400px" width="auto"
-                                    class="img-fluid" alt=""></a>
+                            <a href="details.html"> <img src="../assets/rubrik-microsoft.png" height="400px"
+                                    width="auto" class="img-fluid" alt=""></a>
                         </div>
                         <div class="col-md-7 float-left ">
                             <h3 class="postSection-heading-title">NEWS | INTERMEDIATE</h3>
@@ -307,12 +338,13 @@
                         <div class="row">
                             <div class="col-md-12 mt-5">
                                 <div class="col-md-6 img-related float-left">
-                                    <a href="details.html"><img src="../assets/rubrik-microsoft.png" class="img-fluid" width="auto"
-                                            height="200px" alt=""></a>
+                                    <a href="details.html"><img src="../assets/rubrik-microsoft.png" class="img-fluid"
+                                            width="auto" height="200px" alt=""></a>
                                 </div>
                                 <div class="col-md-6 float-left mt-2 img-related">
                                     <span class="span-a-overview">Overview</span>
-                                    <h4 class="heading-overview"><a href="details.html">Windows Server 2022 Series - Upgrading
+                                    <h4 class="heading-overview"><a href="details.html">Windows Server 2022 Series -
+                                            Upgrading
                                             DC
                                             from 2016 to 2022</a></h4>
                                     <span class="date-overview">Aug 17, 2021 | Michael </span>
@@ -324,30 +356,13 @@
                         <div class="row">
                             <div class="col-md-12 mt-5">
                                 <div class="col-md-6 img-related float-left">
-                                    <a href="details.html"><img src="../assets/rubrik-microsoft.png" class="img-fluid" width="auto"
-                                            height="200px" alt=""></a>
+                                    <a href="details.html"><img src="../assets/rubrik-microsoft.png" class="img-fluid"
+                                            width="auto" height="200px" alt=""></a>
                                 </div>
                                 <div class="col-md-6 float-left mt-2 img-related">
                                     <span class="span-a-overview">Overview</span>
-                                    <h4 class="heading-overview"><a href="details.html">Windows Server 2022 Series - Upgrading
-                                            DC
-                                            from 2016 to 2022</a></h4>
-                                    <span class="date-overview">Aug 17, 2021 | Michael </span>
-                                </div>
-                            </div>
-                        </div>
-
-
-
-                        <div class="row">
-                            <div class="col-md-12 mt-5">
-                                <div class="col-md-6 img-related float-left">
-                                    <a href="details.html"><img src="../assets/rubrik-microsoft.png" class="img-fluid" width="auto"
-                                            height="200px" alt=""></a>
-                                </div>
-                                <div class="col-md-6 float-left mt-2 img-related">
-                                    <span class="span-a-overview">Overview</span>
-                                    <h4 class="heading-overview"><a href="details.html">Windows Server 2022 Series - Upgrading
+                                    <h4 class="heading-overview"><a href="details.html">Windows Server 2022 Series -
+                                            Upgrading
                                             DC
                                             from 2016 to 2022</a></h4>
                                     <span class="date-overview">Aug 17, 2021 | Michael </span>
@@ -360,12 +375,32 @@
                         <div class="row">
                             <div class="col-md-12 mt-5">
                                 <div class="col-md-6 img-related float-left">
-                                    <a href="details.html"><img src="../assets/rubrik-microsoft.png" class="img-fluid" width="auto"
-                                            height="200px" alt=""></a>
+                                    <a href="details.html"><img src="../assets/rubrik-microsoft.png" class="img-fluid"
+                                            width="auto" height="200px" alt=""></a>
                                 </div>
                                 <div class="col-md-6 float-left mt-2 img-related">
                                     <span class="span-a-overview">Overview</span>
-                                    <h4 class="heading-overview"><a href="details.html">Windows Server 2022 Series - Upgrading
+                                    <h4 class="heading-overview"><a href="details.html">Windows Server 2022 Series -
+                                            Upgrading
+                                            DC
+                                            from 2016 to 2022</a></h4>
+                                    <span class="date-overview">Aug 17, 2021 | Michael </span>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                        <div class="row">
+                            <div class="col-md-12 mt-5">
+                                <div class="col-md-6 img-related float-left">
+                                    <a href="details.html"><img src="../assets/rubrik-microsoft.png" class="img-fluid"
+                                            width="auto" height="200px" alt=""></a>
+                                </div>
+                                <div class="col-md-6 float-left mt-2 img-related">
+                                    <span class="span-a-overview">Overview</span>
+                                    <h4 class="heading-overview"><a href="details.html">Windows Server 2022 Series -
+                                            Upgrading
                                             DC
                                             from 2016 to 2022</a></h4>
                                     <span class="date-overview">Aug 17, 2021 | Michael </span>
@@ -453,12 +488,17 @@
                     <a class="icon" href="#"><i class="fab fa-google-plus-g"></i></a>
                 </div>
                 <div>
-                    <p class="follower-title">© 2021 Danish Software Group</p> <a class="folloer-ploiy" href="contact.html">Privacy
+                    <p class="follower-title">© 2021 Danish Software Group</p> <a class="folloer-ploiy"
+                        href="contact.html">Privacy
                         Policy</a>
                 </div>
             </div>
         </div>
     </footer>
+
+
+
+    <script src="../style/serach.js"></script>
 
 </body>
 
