--- a/template/login.html
+++ b/template/login.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>TheCloudHeros - Login</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="../ResgistretionFiles/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css"
+		href="../ResgistretionFiles/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="../fonts/material-icon/css/material-design-iconic-font.min.css">
 
 
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="../ResgistretionFiles/css/util.css">
 	<link rel="stylesheet" type="text/css" href="../ResgistretionFiles/css/main.css">
-<!--===============================================================================================-->
+	<link rel="apple-touch-icon" sizes="180x180" href="../favicon_io (5)/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="../favicon_io (5)/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../favicon_io (5)/favicon-16x16.png">
+	<link rel="manifest" href="../favicon_io (5)/site.webmanifest">
+	<!--===============================================================================================-->
 </head>
+
 <body>
-	
+
 	<div class="limiter">
-		
+
 		<div class="container-login100">
-			
+
 			<div class="wrap-login100">
-				
+
 				<form class="login100-form validate-form">
-					
-				
+
+
 					<span class="login100-form-title p-b-26">
 						Login
 					</span>
-					
 
-					<div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
+
+					<div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
 						<input class="input100" type="text" name="email">
 						<span class="focus-input100" data-placeholder="Email"></span>
 					</div>
@@ -71,17 +78,18 @@
 			</div>
 		</div>
 	</div>
-	
+
 
 	<div id="dropDownSelect1"></div>
-	
-<!--===============================================================================================-->
+
+	<!--===============================================================================================-->
 	<script src="../bootstrap/jquery-3.5.1.min.js"></script>
-<script src="../bootstrap/js/bootstrap.js"></script>
+	<script src="../bootstrap/js/bootstrap.js"></script>
 
 
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="../ResgistretionFiles/js/main.js"></script>
 
 </body>
+
 </html>
