--- a/template/signup.html
+++ b/template/signup.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>TheCloudHeros - Signup</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!--===============================================================================================-->
-<link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="../ResgistretionFiles/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="../ResgistretionFiles/fonts/iconic/css/material-design-iconic-font.min.css"> 
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css"
+		href="../ResgistretionFiles/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css"
+		href="../ResgistretionFiles/fonts/iconic/css/material-design-iconic-font.min.css">
 
 
-
-
-<!--===============================================================================================-->
-<link rel="stylesheet" type="text/css" href="../ResgistretionFiles/css/util.css">
-<link rel="stylesheet" type="text/css" href="../ResgistretionFiles/css/main.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="../ResgistretionFiles/css/util.css">
+	<link rel="stylesheet" type="text/css" href="../ResgistretionFiles/css/main.css">
+	<link rel="apple-touch-icon" sizes="180x180" href="../favicon_io (5)/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="../favicon_io (5)/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../favicon_io (5)/favicon-16x16.png">
+	<link rel="manifest" href="../favicon_io (5)/site.webmanifest">
+	<!--===============================================================================================-->
 </head>
+
 <body>
-	
+
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<form class="login100-form validate-form">
 					<span class="login100-form-title p-b-26">
-						Sign Up 
+						Sign Up
 					</span>
 					<!-- <span class="login100-form-title p-b-48">
 						<i class="zmdi zmdi-font"></i>
 					</span> -->
 
 					<div class="wrap-input100" data-validate="First Name">
-						<input class="input100" type="text" name="name" >
+						<input class="input100" type="text" autofocus name="name">
 						<span class="focus-input100" data-placeholder="First Name"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input " data-validate="email">
-						<input class="input100" type="text" name="email" >
+						<input class="input100" type="text" name="email">
 						<span class="focus-input100" data-placeholder="Email"></span>
 					</div>
 
-					<div class="wrap-input100 validate-input" data-validate="First Name" >
+					<div class="wrap-input100 validate-input" data-validate="First Name">
 						<span class="btn-show-pass">
 							<i class="zmdi zmdi-eye"></i>
 						</span>
@@ -66,10 +72,10 @@
 							</button>
 						</div>
 					</div>
-					
+
 					<div class="text-center p-t-115">
 						<span class="txt1">
-							 have an account?
+							have an account?
 						</span>
 
 						<a class="txt2" href="">
@@ -80,11 +86,11 @@
 			</div>
 		</div>
 	</div>
-	
+
 
 	<div id="dropDownSelect1"></div>
-	
-<!--===============================================================================================-->
+
+	<!--===============================================================================================-->
 	<script src="../bootstrap/jquery-3.5.1.min.js"></script>
 
 	<script src="../bootstrap/js/bootstrap.js"></script>
@@ -93,4 +99,5 @@
 	<script src="../ResgistretionFiles/js/main.js"></script>
 
 </body>
+
 </html>
